# kate-gitlog

./: CMakeLists.txt  README.md  shell.nix
src/: plugin.cpp  plugin.h
